# ros2-performance

./: .gitignore
irobot_benchmark/config/topologies/: small_topology.yaml
irobot_benchmark/topology/: basic_topology.json  small_test.json  small_topology.json
irobot_interfaces_plugin/: CMakeLists.txt  package.xml
irobot_interfaces_plugin/msg/: CameraInfo.msg  Detection2d.msg  Detection2dArray.msg  Detection3d.msg  Detection3dArray.msg  Image.msg  JointState.msg  JointTrajectory.msg  JointTrajectoryPoint.msg  LaserScan.msg  NavigateToPose.msg  NavigateToPoseFeedback.msg  OccupancyGrid.msg  Odometry.msg  Path.msg  PointCloud2 copy.msg  PointCloud2.msg  Pose.msg  TfMessage.msg  TfStaticMessage.msg  Twist.msg  Vector3.msg
performance_metrics/src/: stat_logger.cpp
performance_test/include/performance_test/: executors.hpp  performance_node_base_impl.hpp  system.hpp
performance_test/src/: system.cpp
performance_test_examples/: CMakeLists.txt
performance_test_examples/src/: quantif_simple_arch.cpp
performance_test_examples/src/json/: simple_architecture.json
performance_test_factory/src/: names_utilities.cpp
quantif/config/experiments/: adv.yaml  basic.yaml
quantif/config/topologies/: adv_topology.yaml  basic_topology.yaml
quantif/experiments/: set_topology.py  set_topology_adv_yaml.py  set_topology_yaml.py
quantif/experiments/topologies/: adv_topology.json
quantif/scripts/: run_experiment copy.sh  run_experiment.py  run_experiment.sh  set_topology.py  set_topology_adv.py  set_topology_adv_yaml.py
quantif/scripts/adv_topology_log/: events.txt  latency_all.txt  latency_total.txt  resources.txt
quantif/scripts/topologies/: adv_topology.json  basic_topology.json
quantif_experiments/: CMakeLists.txt  package.xml
quantif_experiments/scripts/: experiment_batch.sh  run_experiment.sh  simple-fast.sh
quantif_experiments/scripts/visualization/: latency_data.csv  latency_stats.py  lost_msgs_stats.py  parser.py  realtime_stats.py  resources_stats.py
quantif_experiments/src/: experiments_options.hpp  quantif_experiment.cpp  quantif_simple_arch.cpp
quantif_experiments/test_archs/: nav.json  social.json  social_rt.json  social_rt2.json  vff.json
quantif_experiments/test_archs/rqt_graphs/: rosgraph_complex.dot  rosgraph_medium.dot  rosgraph_simple.dot
scripts/experiments/quantif/: run_experiment.py
scripts/rmw/rmw_cyclonedds_cpp/: setup.sh
scripts/rmw/rmw_zenoh_cpp/: rmw_zenoh_router_shared_config.json5  rmw_zenoh_session_shared_config.json5  setup.sh
scripts/topologies/: set_topology_yaml.py
